[package]
name                     = "prometheus_wireguard_exporter"
version                  = "3.4.2"
authors                  = ["Francesco Cogno <francesco.cogno@outlook.com>"]
description              = "Prometheus WireGuard Exporter"
edition                  = "2018"

readme                   = "README.md"
license                  = "MIT"
repository               = "https://github.com/MindFlavor/prometheus_wireguard_exporter"
documentation            = "https://github.com/MindFlavor/prometheus_wireguard_exporter"
homepage                 = "https://github.com/MindFlavor/prometheus_wireguard_exporter"

keywords                 = ["prometheus", "exporter", "wireguard"]
categories               = ["database"]

[dependencies]
log                      = "0.4.8"
env_logger               = "0.7.1"
clap                     = "2.33.0"
serde_json               = "1.0"
serde                    = "1.0"
serde_derive             = "1.0"
failure                  = "0.1.8"
hyper                    = { version       = "0.14", features = ["stream"] }
http                     = "0.2"
tokio                    = { version 	   = "1.0", features = ["macros", "rt"] }
prometheus_exporter_base = { version       = "1.1", features = ["hyper_server"] }
regex                    = "1.3.1"
