[package]
name                     = "prometheus_wireguard_exporter"
version                  = "3.5.1"
authors                  = ["Francesco Cogno <francesco.cogno@outlook.com>"]
description              = "Prometheus WireGuard Exporter"
edition                  = "2018"

readme                   = "README.md"
license                  = "MIT"
repository               = "https://github.com/MindFlavor/prometheus_wireguard_exporter"
documentation            = "https://github.com/MindFlavor/prometheus_wireguard_exporter"
homepage                 = "https://github.com/MindFlavor/prometheus_wireguard_exporter"

keywords                 = ["prometheus", "exporter", "wireguard"]
categories               = ["database"]

[features]
default 		 = []
leaky_log     		 = []

[dependencies]
log                      = "0.4.14"
env_logger               = "0.8.4"
clap                     = "2.33.0"
serde_json               = "1.0"
serde                    = "1.0"
serde_derive             = "1.0"
thiserror		 = "1.0"
hyper                    = { version       = "0.14", features = ["stream"] }
http                     = "0.2"
tokio                    = { version 	   = "1.0", features = ["macros", "rt"] }
prometheus_exporter_base = { git = "https://github.com/gausnes/prometheus_exporter_base", branch = "ContentType", features = ["hyper_server"] }
regex                    = "1.5.4"

[dev-dependencies]
clippy = "0.0"
