[package]
name                     = "prometheus_wireguard_exporter"
version                  = "3.6.4"
authors                  = ["Francesco Cogno <francesco.cogno@outlook.com>"]
description              = "Prometheus WireGuard Exporter"
edition                  = "2018"

readme                   = "README.md"
license                  = "MIT"
repository               = "https://github.com/MindFlavor/prometheus_wireguard_exporter"
documentation            = "https://github.com/MindFlavor/prometheus_wireguard_exporter"
homepage                 = "https://github.com/MindFlavor/prometheus_wireguard_exporter"

keywords                 = ["prometheus", "exporter", "wireguard"]
categories               = ["database"]

[features]
default 		 = []
leaky_log     		 = []

[dependencies]
log                      = "0.4.17"
env_logger               = "0.9.3"
clap                     = { version = "4.0.26", features = ["cargo", "env"] }
serde_json               = "1.0.88"
serde                    = "1.0.147"
thiserror		 = "1.0.37"
anyhow			 = "1.0.66"
hyper                    = { version = "0.14.23", features = ["stream"] }
http                     = "0.2.8"
tokio                    = { version = "1.22.0", features = ["macros", "rt"] }
prometheus_exporter_base = { version = "1.3.0", features = ["hyper_server"] }
regex                    = "1.7.0"

[dev-dependencies]
clippy = "0.0.302"
